


DescTools 0.99.60 (2025-03-30)
------------------------------

NEW FUNCTIONS ADDED:
  * ...

UPDATED FUNCTIONS:
  * FisherZ() and FisherZInv() use atanh(), resp. tanh() now.
    (Credits to Daniel Wollschlaeger)
  * Year(), Week(), YearWeek() have been recoded in C++ and run now
    4-10 times faster.
  * Format() gets two new predefined formats for displaying confidence 
    intervals, fmt="ci" and fmt="ci%".

BUGFIXES:
  * ...




DescTools 0.99.59 (2025-01-26)
------------------------------

NEW FUNCTIONS ADDED:
  * SumCI() returns the confidence interval of the sum of multiple variables
    with given confidence intervals.
  * CutGen() yields the generation category based on year of birth. 

UPDATED FUNCTIONS:
  * BrierScoreCI() now supports "scaled" argument.
  * KendallW() has been updated to better support missing values.
  * TMod() and print.TMod() gain a new "verb" argument to restrict
    the number of performance indicators in the output.

BUGFIXES:
  * CountCompCases() accepts data.tables and list columns in data.frames.
  * MultinomCI() did not return the full accuracy in the method of Sison Glaz. 




DescTools 0.99.58 (2024-11-10)
------------------------------

NEW FUNCTIONS ADDED:
  * ReadSPSS() converts SPSS data in a data.frame.
  * AppendRowNames() shortcut to append rownames as a new column
    to a data.frame.

UPDATED FUNCTIONS:
  * CourseData() finds more files now.

BUGFIXES:
  * BrierScore() has not handled the responses of glms correctly
    since the last change, forcing the user to use predict-response
    interface.



DescTools 0.99.56 (2024-08-31)
------------------------------

NEW FUNCTIONS ADDED:
  * WrdTableHeadings() enables the easy definition of multiple 
    table headings in Word tables.
 
UPDATED FUNCTIONS:
  * TOne() gets an own subsetting routine.
  * Using #define STRICT_R_HEADERS used in order to comply with CRAN's
    new standards.
  * DescToolsOptions() gets a new option "linesep" used by some output 