@@ -1,8 +1,8 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-Version: 0.99.59.6
-Date: 2025-03-06
+Version: 0.99.59.7
+Date: 2025-03-16
 Authors@R: c(
   person(given="Andri", family="Signorell", 
          email = "andri@signorell.net", 
@@ -133,7 +133,7 @@ Suggests:
     R.rsp,
     testthat (>= 3.0.0)
 Depends: base, stats, R (>= 4.2.0)
-Imports: graphics, grDevices, methods, MASS, utils, boot, mvtnorm, expm, Rcpp (>= 0.12.10), rstudioapi, Exact, gld, data.table, readxl, haven, httr, withr, cli
+Imports: graphics, grDevices, methods, MASS, utils, boot, mvtnorm, expm, Rcpp (>= 0.12.10), rstudioapi, Exact, gld, data.table, readxl, haven, httr, withr, cli, fs
 LinkingTo: Rcpp
 License: GPL (>= 2)
 LazyLoad: yes
