@@ -83,7 +83,7 @@ export(
 "CmykToCmy", "CmyToCmyk", "RgbToCmy", "CmykToRgb", "RevCode", "MADCI","QuantileCI", "BinomCIn",
 "GetCalls", "BhapkarTest", "StrExtractBetween", "GenRandGroups", "Rank", "rSum21",
 "dTri","pTri","qTri","rTri",
-"BrierScoreCI","CstatCI","RSqCI", "ReadSPSS"
+"BrierScoreCI","CstatCI","RSqCI", "ReadSPSS", "Downloads"
 )
 
 
@@ -118,7 +118,8 @@ importFrom("withr", "with_seed")
 importFrom("readxl","read_excel")
 importFrom("haven", "read_spss")
 importFrom("httr","GET","write_disk", "http_status")
-importFrom("cli", "col_red","col_silver","style_bold","col_blue","col_cyan")
+importFrom("cli", "col_red","col_silver","style_bold","col_blue","col_cyan","cli_alert_info")
+importFrom("fs", "path_home")
 
 S3method(as.Date, ym)
 S3method(Month, ym)
