@@ -1607,20 +1607,18 @@ Kurt <- function (x, weights=NULL, na.rm = FALSE, method = 3, conf.level = NA,
 Outlier <- function(x, method=c("boxplot", "hampel"), value=TRUE, na.rm=FALSE){
 
   switch(match.arg(arg = method, choices = c("boxplot", "hampel")),
-         #         boxplot =  { x[x %)(% (quantile(x, c(0.25,0.75), na.rm=na.rm) + c(-1,1) * 1.5*IQR(x,na.rm=na.rm))] }
+         
          boxplot =  {
-           # old, replaced by v. 0.99.26
-           # res <- boxplot(x, plot = FALSE)$out
-
              qq <- quantile(as.numeric(x), c(0.25, 0.75), na.rm = na.rm, names = FALSE)
              iqr <- diff(qq)
              id <- x < (qq[1] - 1.5 * iqr) | x > (qq[2] + 1.5 * iqr)
-
            },
          
          hampel = {
+           med_x <- median(x, na.rm=na.rm)
+           
            # hampel considers values outside of median ± 3*(median absolute deviation) to be outliers
-           id <- x %][% (median(x, na.rm=na.rm) + 3 * c(-1, 1) * mad(x, na.rm=na.rm))
+           id <- x %][% (med_x + c(-3, 3) * mad(x, na.rm=na.rm, center = med_x))
          }
   )
 
