@@ -5,7 +5,7 @@ DescTools 0.99.60 (2025-03-30)
 ------------------------------
 
 NEW FUNCTIONS ADDED:
-  * ...
+  * Downloads() helperfunction to fast acces downloaded XL- or data files.
 
 UPDATED FUNCTIONS:
   * FisherZ() and FisherZInv() use atanh(), resp. tanh() now.
@@ -14,6 +14,8 @@ UPDATED FUNCTIONS:
     4-10 times faster.
   * Format() gets two new predefined formats for displaying confidence 
     intervals, fmt="ci" and fmt="ci%".
+  * Small improvement in Outlier() for method "hampel"  
+    (Credits to Luis Gustavo Schuck).
 
 BUGFIXES:
   * ...
